[gd_scene load_steps=11 format=3 uid="uid://b001x1vy32ufc"]

[ext_resource type="Script" path="res://Scripts/MenuPausa.gd" id="1_crgih"]
[ext_resource type="Texture2D" uid="uid://bok801c5vcwh7" path="res://Iconos/icono_pausa.png" id="2_h3ury"]
[ext_resource type="FontFile" uid="uid://nrp664l5g3ws" path="res://Fonts/Lilita_One,Rubik_Scribble/Lilita_One/LilitaOne-Regular.ttf" id="3_2i3eu"]
[ext_resource type="StyleBox" uid="uid://xj053q2yvb2t" path="res://Styles/ButtonStyleMainMenu.tres" id="3_mqmfg"]
[ext_resource type="AudioStream" uid="uid://dxcqw0li8usiu" path="res://Audio/audio_oceano_afuera.mp3" id="5_bwl2k"]
[ext_resource type="Texture2D" uid="uid://bkyonjoxhggoc" path="res://Iconos/flecha_juego.png" id="6_xveh2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xbuy"]
bg_color = Color(0.337255, 0.815686, 0.835294, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.776471, 0.854902, 0.858824, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
corner_detail = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqmyq"]
bg_color = Color(0.2, 0.588235, 0.603922, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5m5h"]
bg_color = Color(0.886275, 0.223529, 0.235294, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.2, 0.588235, 0.603922, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rev5a"]
bg_color = Color(0.0627451, 0.317647, 0.470588, 0.45098)
corner_radius_top_right = 30
corner_radius_bottom_right = 30

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crgih")

[node name="BotonPausa" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 80.0
offset_right = -70.0
offset_bottom = 230.0
grow_horizontal = 0
icon = ExtResource("2_h3ury")
flat = true
icon_alignment = 1
expand_icon = true

[node name="BotonSuma" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1202.0
offset_top = 252.0
offset_right = -1052.0
offset_bottom = 402.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Suma"
icon_alignment = 1
expand_icon = true

[node name="BotonResta" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1401.0
offset_top = 249.0
offset_right = -1251.0
offset_bottom = 399.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Resta
"
icon_alignment = 1
expand_icon = true

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2xbuy")

[node name="Titulo" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_2i3eu")
theme_override_font_sizes/font_size = 100
text = "Pausa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonesPrincipales" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="BotonReiniciar" type="Button" parent="Panel/BotonesPrincipales"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_2i3eu")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("3_mqmfg")
theme_override_styles/hover = ExtResource("3_mqmfg")
theme_override_styles/pressed = ExtResource("3_mqmfg")
theme_override_styles/disabled = ExtResource("3_mqmfg")
theme_override_styles/focus = ExtResource("3_mqmfg")
text = "Reiniciar
"
icon_alignment = 1
expand_icon = true

[node name="BotonSalir" type="Button" parent="Panel/BotonesPrincipales"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_2i3eu")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("3_mqmfg")
theme_override_styles/hover = ExtResource("3_mqmfg")
theme_override_styles/pressed = ExtResource("3_mqmfg")
theme_override_styles/disabled = ExtResource("3_mqmfg")
theme_override_styles/focus = ExtResource("3_mqmfg")
text = "Salir al men√∫"
expand_icon = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_bwl2k")
autoplay = true

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 100.0
offset_right = 500.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_mqmyq")
theme_override_styles/fill = SubResource("StyleBoxFlat_e5m5h")
step = 0.1

[node name="ZonaSeguraPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -764.0
offset_top = -431.0
offset_right = -470.0
offset_bottom = -351.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rev5a")

[node name="ZonaSeguraTexto" type="Label" parent="."]
offset_left = 1102.0
offset_top = 6.0
offset_right = 1527.0
offset_bottom = 98.0
theme_override_fonts/font = ExtResource("3_2i3eu")
theme_override_font_sizes/font_size = 60
text = "Seguro moverte"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Agarre" type="Label" parent="."]
layout_mode = 1
offset_left = 160.0
offset_top = 100.0
offset_right = 397.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("3_2i3eu")
theme_override_font_sizes/font_size = 80
text = "Agarre"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Efecto cayendo" type="Node" parent="."]

[node name="Cayendo3" type="Label" parent="Efecto cayendo"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 331.0
offset_top = -119.0
offset_right = 629.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.886275, 0.223529, 0.235294, 1)
theme_override_fonts/font = ExtResource("3_2i3eu")
theme_override_font_sizes/font_size = 80
text = "Cayendo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cayendo2" type="Label" parent="Efecto cayendo"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -619.0
offset_top = -180.0
offset_right = -321.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.886275, 0.223529, 0.235294, 1)
theme_override_fonts/font = ExtResource("3_2i3eu")
theme_override_font_sizes/font_size = 80
text = "Cayendo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cayendo" type="Label" parent="Efecto cayendo"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -149.0
offset_top = -280.0
offset_right = 149.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.886275, 0.223529, 0.235294, 1)
theme_override_fonts/font = ExtResource("3_2i3eu")
theme_override_font_sizes/font_size = 80
text = "Cayendo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FlechaJuego2" type="Sprite2D" parent="Efecto cayendo"]
position = Vector2(1748, 568)
rotation = -0.410152
scale = Vector2(0.221641, 0.116123)
texture = ExtResource("6_xveh2")

[node name="FlechaJuego" type="Sprite2D" parent="Efecto cayendo"]
position = Vector2(217, 863)
rotation = 0.191986
scale = Vector2(0.176335, 0.141046)
texture = ExtResource("6_xveh2")

[node name="Efecto sumergiendo" type="Node" parent="."]

[node name="Cayendo3" type="Label" parent="Efecto sumergiendo"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -227.0
offset_right = 224.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.447059, 0.894118, 0.972549, 1)
theme_override_fonts/font = ExtResource("3_2i3eu")
theme_override_font_sizes/font_size = 80
text = "Sumergiendo"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BotonPausa" to="." method="_on_boton_pausa_pressed"]
[connection signal="toggled" from="BotonPausa" to="." method="_on_boton_pausa_toggled"]
[connection signal="pressed" from="BotonSuma" to="." method="_on_boton_suma_pressed"]
[connection signal="pressed" from="BotonResta" to="." method="_on_boton_resta_pressed"]
[connection signal="pressed" from="Panel/BotonesPrincipales/BotonReiniciar" to="." method="_on_boton_reiniciar_pressed"]
[connection signal="pressed" from="Panel/BotonesPrincipales/BotonSalir" to="." method="_on_boton_salir_pressed"]
